# SPDX-License-Identifier: Apache-2.0
[package]
name = "loki-macro-host"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Macro trust store, capability broker, and host services for the Loki suite — deny-by-default macro security (macro spec Phase 4)"
repository = "https://github.com/appthere/loki"
keywords = ["macro", "security", "capability", "trust", "loki"]
categories = ["gui"]

# Layer L5 (ADR-0009): consumes the interpreter core and the neutral document
# models; consumed only by the client app binaries, never by any server or
# headless crate (macro spec §10, enforced by scripts/check-loki-basic-pure.py).
# The capability broker is the *only* thing that grants a macro any authority
# (macro spec §4.3, §5): the interpreter has none of its own.
[features]
# Off by default (ADR-0015 §8 decision 1). Compiles in the macro `Network`
# capability (bounded HTTPS GET) — pulling in the `reqwest`/`rustls` transport;
# a distribution can exclude the network code entirely by building without it.
# Even when compiled, network stays off until the runtime setting is also on —
# both must be on. Off in the iOS build (§8 decision 5).
macro-net = ["dep:reqwest"]

[dependencies]
loki-basic = { path = "../loki-basic" }
loki-doc-model = { path = "../loki-doc-model" }
loki-sheet-model = { path = "../loki-sheet-model" }
# Signature verification (L2): turns a preserved macro signature into a
# SignatureVerdict; this crate decides *trust* against the user-pinned
# publisher store (ADR-0014 §4.3/§4.5, 8A.5).
loki-macro-sig = { path = "../loki-macro-sig" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Relative-redirect resolution + origin parsing for the network policy (always
# compiled — pure Rust, tiny; the reqwest transport below is the gated part).
url = "2"
# The macro Network transport (ADR-0015 §4.1, 8B.3): only pulled in under the
# `macro-net` feature. rustls (pure Rust) to match the blitz-net patch —
# native-tls would link libssl.so, absent on Android; `blocking` because macro
# runs happen on a dedicated worker thread, never the UI loop.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "blocking",
], optional = true }

[dev-dependencies]
# End-to-end open-path test: build a real signed ODF macrosignatures.xml.
rcgen = { version = "=0.13.2", default-features = false, features = ["pem", "ring"] }
rsa = { version = "=0.9.10", features = ["sha2"] }
pkcs8 = { version = "=0.10.2", features = ["pem"] }
sha2 = { version = "=0.10.9", features = ["oid"] }
base64 = "0.22"
rand = "=0.8.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
