[package]
name = "loki-model"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Shared server-side identifiers, encryption tiers, and ACL types for the Loki suite (no server dependencies)"
repository = "https://github.com/appthere/loki"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
