[package]
name = "loki-odf"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "ODF (OpenDocument) import + ODS export for the Loki document suite (ODT export pending)"
repository = "https://github.com/appthere/loki"
keywords = ["odf", "odt", "opendocument", "document", "loki"]
categories = ["encoding", "parser-implementations", "text-processing"]

[dependencies]
loki-doc-model  = { path = "../loki-doc-model" }
loki-sheet-model = { path = "../loki-sheet-model" }
loki-primitives = { path = "../loki-primitives" }
appthere-color  = "0.1.1"
quick-xml       = { version = "0.36", features = [] }
zip             = { version = "2", default-features = false, features = ["deflate"] }
thiserror       = "2"
indexmap        = "2"
base64          = "0.22"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std"]

[dev-dependencies]
loki-layout = { path = "../loki-layout" }
# Spec 02 round-trip axis: the normalized-model differ + Document canonicalizer.
appthere-conformance = { path = "../appthere-conformance", features = ["doc-model"] }
loki-primitives = { path = "../loki-primitives" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
