[package]
name = "loki-ooxml"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "OOXML (DOCX/XLSX/PPTX) import/export for the Loki suite"
repository = "https://github.com/appthere/loki"
keywords = ["docx", "ooxml", "document", "office", "loki"]
categories = ["encoding", "parser-implementations", "text-processing"]

[features]
default = ["docx"]
docx = []
xlsx = []
pptx = ["dep:loki-graphics", "dep:loki-presentation-model"]

[dependencies]
# serde: enables the real core-properties (docProps/core.xml) reader/writer
# in loki-opc (otherwise both are no-op stubs). Required for metadata import/export.
loki-opc       = { path = "../loki-opc", features = ["serde"] }
loki-doc-model = { path = "../loki-doc-model" }
loki-sheet-model = { path = "../loki-sheet-model" }
loki-primitives = { path = "../loki-primitives" }
# Presentation import targets (pptx feature only).
loki-graphics = { path = "../loki-graphics", optional = true }
loki-presentation-model = { path = "../loki-presentation-model", optional = true }
appthere-color = "0.1.1"
quick-xml      = { version = "0.41", features = ["serialize"] }
thiserror      = "2"
indexmap       = "2"

base64 = "0.22"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std"]

[dev-dependencies]
loki-opc    = { path = "../loki-opc" }
loki-layout = { path = "../loki-layout" }
# Phase 7.7 VBA macro-editor end-to-end test: build a real vbaProject.bin (cfb),
# edit it (loki-vba write-back), and round-trip it through DOCX export/import.
loki-vba = { path = "../loki-vba" }
cfb = "0.7"
# Spec 02 round-trip axis: the normalized-model differ + Document/Workbook
# canonicalizers (doc-model for DOCX, sheet-model for XLSX).
appthere-conformance = { path = "../appthere-conformance", features = ["doc-model", "sheet-model"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
parley = "0.10"
read-fonts = "0.40"
quick-xml = { version = "0.41" }
# The PPTX round-trip integration test (gated on the `pptx` feature) builds a
# presentation from these crates directly.
loki-presentation-model = { path = "../loki-presentation-model" }
loki-graphics = { path = "../loki-graphics", features = ["serde"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
