[package]
name = "loki-opc"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Open Packaging Conventions (ISO/IEC 29500-2:2021) for the Loki suite"
repository = "https://github.com/appthere/loki-opc"
keywords = ["opc", "ooxml", "packaging", "zip", "office"]
categories = ["encoding", "parser-implementations", "filesystem"]

[features]
default = ["std"]
std = []
# Disables all deviation handling. Strictly spec-conformant read behaviour.
# Non-conformant input will produce errors rather than warnings.
strict = []
serde = ["dep:serde", "chrono/serde"]

[dependencies]
thiserror = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.36", features = ["serialize"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dev-dependencies]
tempfile = "3"
approx = "0.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]