# SPDX-License-Identifier: Apache-2.0
[package]
name = "loki-presentation-model"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Format-neutral presentation document model (slides over loki-graphics) plus Loro CRDT bridge"
repository = "https://github.com/appthere/loki"
keywords = ["presentation", "pptx", "odp", "slides", "model"]
categories = ["data-structures"]

[dependencies]
# A slide is a drawing page plus presentation semantics, so the model builds on
# the shared vector-graphics model (serde enabled for the CRDT snapshot bridge).
loki-graphics = { path = "../loki-graphics", features = ["serde"] }
loro = "1.11.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
