[package]
name = "loki-presentation"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Dioxus Native slide deck presentation application for the Loki document suite"
repository = "https://github.com/appthere/loki"

[lib]
name = "loki_presentation"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "loki-presentation"
path = "src/main.rs"

[dependencies]
# Dioxus Native (Blitz renderer) with client-side router.
dioxus          = { version = "=0.7.9", features = ["native", "router"] }
# OOXML import/export.
loki-ooxml      = { path = "../loki-ooxml", features = ["pptx"] }
# Presentation document model + shared vector-graphics model.
loki-presentation-model = { path = "../loki-presentation-model" }
loki-graphics   = { path = "../loki-graphics" }
# Shared AppThere design tokens and UI components.
appthere-ui     = { path = "../appthere-ui" }
loki-app-shell  = { path = "../loki-app-shell" }
# Bundled UI font (Atkinson Hyperlegible Next) + Android fallback faces.
loki-fonts.workspace = true
# Cross-platform file picker.
loki-file-access.workspace = true
# Typed error derivation.
thiserror       = "2"
# Font config.
fontique        = { version = "0.10", features = ["fontconfig-dlopen"] }
# Fluent i18n.
loki-i18n = { path = "../loki-i18n" }

[package.metadata.android]
package = "com.appthere.loki.presentation"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 34
compile_sdk_version = 34

[package.metadata.android.application]
label = "Loki Presentation"

[package.metadata.android.signing.release]
path = "../target/android-pkg/signing.keystore"
keystore_password = "android"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { workspace = true }
blitz-shell = "0.2.3"
android_logger = "0.15"
log = "0.4"

[dev-dependencies]
# Used by slide_view tests to construct DocumentColor values.
loki-primitives = { path = "../loki-primitives" }
