[package]
name = "loki-print"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "IPP print dispatch for rendered PDFs (headless spec ADR-C023)"
repository = "https://github.com/appthere/loki"

[dependencies]
ipp = { version = "6.0.1", default-features = false, features = ["client-rustls"] }
thiserror = { workspace = true }
