[package]
name = "loki-render-cache"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Tiered page render cache policy for Loki's Vello renderer"

[dependencies]
thiserror = "2"
tracing   = "0.1"
wgpu      = { version = "26", optional = true }

[features]
# `gpu` enables wgpu-backed texture utilities (GpuTexture, allocate_texture,
# downsample_texture) and the PageSource trait used by loki-renderer.
gpu = ["dep:wgpu"]

[dev-dependencies]
pollster = "0.4"
