[package]
name = "loki-render-cache"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Page render primitives (PageSource trait + GPU texture handle) for Loki's Vello renderer"

[dependencies]
thiserror = "2"
wgpu      = { version = "26", optional = true }

[features]
# `gpu` enables the wgpu-backed `GpuTexture` handle and the `PageSource` trait
# used by loki-renderer.
gpu = ["dep:wgpu"]
